attempt to fix login/logout link not showing on mobile devices

--- a/src/app/_components/Header/Nav/index.module.scss
+++ b/src/app/_components/Header/Nav/index.module.scss
@@ -89,8 +89,8 @@
   .userIconContainer {
     display: flex;
     align-items: center;
-    position: absolute;
-    bottom: 8.5rem;
+    position: fixed;
+    bottom: 1rem;
     left: 0;
     padding-top: 1.2rem;
     padding-left: 1.2rem;
